finished MVP and Stretch. Fixed final bug

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -5,6 +5,11 @@
 
 li {
   list-style-type: none;
+  margin: auto;
+}
+
+ul {
+  padding-right: 40px;
 }
 
 .field {
