--- a/friends/src/components/FriendList.scss
+++ b/friends/src/components/FriendList.scss
@@ -4,6 +4,6 @@
   justify-content: space-evenly;
 }
 
-.wrapper {
-  margin: auto;
-}
+// .wrapper {
+//   margin: auto;
+// }
